salesforce/force-app/main/default/objects/Order_Change__e/Order_Change__e.object-meta.xml
<CustomObject>
    <description>Published when an Order changes in a way the ERP needs to know about. Consumed by the order-sync service over the Pub/Sub API.</description>
    <label>Order Change</label>
    <pluralLabel>Order Changes</pluralLabel>
</CustomObject>