salesforce/force-app/main/default/objects/Order_Change__e/fields/Account_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_External_Id__c</fullName>
    <label>Account External Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>