salesforce/force-app/main/default/objects/Order_Change__e/fields/Event_Uuid__c.field-meta.xml
<CustomField>
    <fullName>Event_Uuid__c</fullName>
    <label>Event Uuid</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>